# cargo-fuzz-example

./: Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: can_deadlock.rs  can_panic.rs  fuzz_target_1.rs
fuzz/fuzz_targets/fuzz_target_1/inputs/: close.txt  valid.txt
src/: lib.rs
