[package]
name = "cargo-fuzz-example-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.cargo-fuzz-example]
path = ".."

[[bin]]
name = "can_panic"
path = "fuzz_targets/can_panic.rs"
test = false
doc = false

[[bin]]
name = "can_deadlock"
path = "fuzz_targets/can_deadlock.rs"
test = false
doc = false
